Muitas implementações do pacote de correções e refinamentos

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,8 @@
 </nav>
 <style>
     html,body{
-        background-image: url(imagens/arenablur.jpg);
+        /*background-image: url(imagens/arenablur.jpg);*/
+        background-color: #548EFA;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
